--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.4.1
@@ -36,8 +37,10 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   font_awesome_flutter: ^10.7.0
+  get_it: ^7.6.7
   go_router: ^13.2.0
   google_fonts: ^6.1.0
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_lints: ^3.0.1
